--- a/quiz.html
+++ b/quiz.html
@@ -114,7 +114,7 @@
         });
 
         function redirectToHome() {
-            window.location.href = "index.html";
+            window.location.href = "gallery.html";
         }
     </script>
 </body>
